--- a/src/style.css
+++ b/src/style.css
@@ -65,25 +65,45 @@ h1{
     
 }
 
-#info{
+#container{
     width:80vw;
     max-width: 1100px;
     min-width: 500px;
-}
-
-
-#info p{
     font-size: clamp(30px, 2vw, 40px);
     background-color: var(--backclr);
     border-radius: 15px;
     padding: 20px 50px 20px 50px;
     color:white;
-    
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 
 
 }
-#nameCont{
+
+
+#container p{
+    /*font-size: clamp(30px, 2vw, 40px);
+    background-color: var(--backclr);
+    border-radius: 15px;
+    padding: 20px 50px 20px 50px;
+    color:white;*/
+}
+
+
+
+
+
+#map{
+    width:90%;
+    margin-top: 20px;
+
+}
+
+#headerCont{
     background-color: var(--backclr);
     border-radius: 15px;
     margin-top: 40px;
