--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 *{
     margin:0;
     padding: 0;
 }
 :root{
     box-sizing: border-box;
-    --backclr: #40404096;
+    --backclr: #2c2c2ccc;
+    --clrtext:#dedede;
 }
 
 body{
+    font-family: 'Roboto', sans-serif;
     background-image: url(/src/img/backgrnd_large.jpg);
     background-position: center center ;
     background-repeat: no-repeat;
@@ -15,7 +20,12 @@ body{
     background-size: cover;
     background-color: #464646;
     min-width: 500px;
-    
+    height: 100vh;
+    min-height: 1200px;
+    color:var(--clrtext);
+    line-height: 1.3;
+   
+    position:relative;
     
     
     
@@ -25,7 +35,6 @@ body{
     flex-direction: column;
     align-items: center;
     gap:1rem;
-
 }
     
 
@@ -40,25 +49,26 @@ body{
 }
 li{
     margin: 30px 0;
-    
     height:auto;
     /*width: vw;*/
     min-width: 60px;
     display:grid;
     justify-content: center;
     align-content: center;
-    font-size: clamp(30px, 2vw, 40px);
-    
+    /*font-size: clamp(30px, 2vw, 40px);*/
+    font-size:30px;
     background-color: var(--backclr);
     border-radius: 15px;
     padding: 20px 50px 20px 50px;
-    color:white;
-
+    
+}
+li:hover{
+    transform: scale(1.1);
 }
 
 
 h1{
-    color:white;
+    
     text-align: center;
     font-size: clamp(50px, 2.5vw, 60px);
     
@@ -69,32 +79,35 @@ h1{
     width:80vw;
     max-width: 1100px;
     min-width: 500px;
-    font-size: clamp(30px, 2vw, 40px);
+    /*font-size: clamp(30px, 2vw, 40px);*/
+    font-size:30px;
     background-color: var(--backclr);
+
     border-radius: 15px;
     padding: 20px 50px 20px 50px;
-    color:white;
     text-align: center;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-
-
 }
 
 
-#container p{
-    /*font-size: clamp(30px, 2vw, 40px);
-    background-color: var(--backclr);
-    border-radius: 15px;
-    padding: 20px 50px 20px 50px;
-    color:white;*/
+td{
+    padding-bottom: 10px;
+    width:100%
 }
 
+.right{
+    text-align:right;
+    padding-left: 10px;
+    
+}
+.left{
+    padding-right: 10px;
+    text-align:left;
 
-
+}
 
 
 #map{
@@ -108,20 +121,45 @@ h1{
     border-radius: 15px;
     margin-top: 40px;
     padding: 20px 50px 20px 50px;
-    
+}
 
+#footer{
+    width:80vw;
+    max-width: 1100px;
+    min-width: 500px;
+    /*font-size: clamp(30px, 2vw, 40px);*/
+    font-size:30px;
+    background-color: var(--backclr);
+
+    border-radius: 15px;
+    padding: 20px 50px 20px 50px;
+    
+    text-align: center;
+    position:absolute;
+    bottom:10px;
 
 }
+
+#footer a{
+    margin-top: 40px;
+    color:var(--clrtext);
+    margin-left: 20px;
+    margin-right: 20px
+}
+
+
 @media (max-width: 767px){
     
     body{
         background-image: url(/src/img/backgrnd_small.jpg);
+        
+   
+        position:relative;
     }
 
-    h1{
-        color:green;
-    }
     li{
         padding: 20px 2rem 20px 2rem;
     }
 }
+
+
