--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body{
     background-color: #464646;
     min-width: 500px;
     height: 100vh;
-    min-height: 1200px;
+    min-height: 900px;
     
     color:var(--clrtext);
     line-height: 1.3;
@@ -35,7 +35,7 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
-    gap:1rem;
+    
 }
     
 
@@ -49,7 +49,7 @@ body{
     min-width: 500px;
 }
 li{
-    margin: 30px 0;
+    margin: 20px 0;
     height:auto;
     /*width: vw;*/
     min-width: 60px;
@@ -57,7 +57,7 @@ li{
     justify-content: center;
     align-content: center;
     /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:30px;
+    font-size:20px;
     background-color: var(--backclr);
     border-radius: 15px;
     padding: 20px 50px 20px 50px;
@@ -71,7 +71,7 @@ li:hover{
 h1{
     
     text-align: center;
-    font-size: clamp(50px, 2.5vw, 60px);
+    font-size: clamp(30px, 2.5vw, 40px);
     
     
 }
@@ -81,7 +81,7 @@ h1{
     max-width: 1100px;
     min-width: 500px;
     /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:30px;
+    font-size:20px;
     background-color: var(--backclr);
 
     border-radius: 15px;
@@ -112,7 +112,7 @@ td{
 
 
 #map{
-    width:90%;
+    width:80%;
     margin-top: 20px;
 
 }
@@ -120,7 +120,7 @@ td{
 #headerCont{
     background-color: var(--backclr);
     border-radius: 15px;
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 20px 50px 20px 50px;
 }
 
@@ -129,7 +129,7 @@ td{
     max-width: 1100px;
     min-width: 500px;
     /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:20px;
+    font-size:15px;
     background-color: var(--backclr);
 
     border-radius: 15px;
@@ -158,7 +158,11 @@ td{
     }
 
     li{
-        padding: 20px 2rem 20px 2rem;
+        padding: 10px 1rem 10px 1rem;
+        margin:10px 0;
+    }
+    #content{
+        gap:10px;
     }
 }
 
