--- a/src/style.css
+++ b/src/style.css
@@ -1,169 +1,146 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-
-*{
-    margin:0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-:root{
-    box-sizing: border-box;
-    --backclr: #2c2c2ccc;
-    --clrtext:#dedede;
-}
-
-body{
-    font-family: 'Roboto', sans-serif;
-    background-image: url(/src/img/backgrnd_large.jpg);
-    background-position: center center ;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: #464646;
-    min-width: 500px;
-    height: 100vh;
-    min-height: 900px;
-    
-    color:var(--clrtext);
-    line-height: 1.3;
-   
-    position:relative;
-    
-    
-    
-}
-#content{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-    
-
-#navigation{
-    list-style: none;
-    display:flex;
-    flex-direction: row;
-    width:80vw;
-    justify-content: space-around;
-    max-width: 1100px;
-    min-width: 500px;
-}
-li{
-    margin: 20px 0;
-    height:auto;
-    /*width: vw;*/
-    min-width: 60px;
-    display:grid;
-    justify-content: center;
-    align-content: center;
-    /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:20px;
-    background-color: var(--backclr);
-    border-radius: 15px;
-    padding: 20px 50px 20px 50px;
-    
-}
-li:hover{
-    transform: scale(1.1);
+:root {
+  box-sizing: border-box;
+  --backclr: #2c2c2ccc;
+  --clrtext: #dedede;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  background-image: url(/src/img/backgrnd_large.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+  min-width: 500px;
+  height: 100vh;
+  min-height: 900px;
 
-h1{
-    
-    text-align: center;
-    font-size: clamp(30px, 2.5vw, 40px);
-    
-    
+  color: var(--clrtext);
+  line-height: 1.3;
+
+  position: relative;
+}
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#container{
-    width:80vw;
-    max-width: 1100px;
-    min-width: 500px;
-    /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:20px;
-    background-color: var(--backclr);
-
-    border-radius: 15px;
-    padding: 20px 50px 20px 50px;
-    text-align: center;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#navigation {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  justify-content: space-around;
+  max-width: 1100px;
+  min-width: 500px;
+}
+li {
+  margin: 20px 0;
+  height: auto;
+  /*width: vw;*/
+  min-width: 60px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  /*font-size: clamp(30px, 2vw, 40px);*/
+  font-size: 20px;
+  background-color: var(--backclr);
+  border-radius: 15px;
+  padding: 20px 50px 20px 50px;
+}
+li:hover {
+  transform: scale(1.1);
 }
 
-
-td{
-    padding-bottom: 10px;
-    width:100%
+h1 {
+  text-align: center;
+  font-size: clamp(30px, 2.5vw, 40px);
 }
 
-.right{
-    text-align:right;
-    padding-left: 10px;
-    
-}
-.left{
-    padding-right: 10px;
-    text-align:left;
+#container {
+  width: 80vw;
+  max-width: 1100px;
+  min-width: 500px;
+  /*font-size: clamp(30px, 2vw, 40px);*/
+  font-size: 20px;
+  background-color: var(--backclr);
 
-}
-
-
-#map{
-    width:80%;
-    margin-top: 20px;
-
-}
-
-#headerCont{
-    background-color: var(--backclr);
-    border-radius: 15px;
-    margin-top: 20px;
-    padding: 20px 50px 20px 50px;
+  border-radius: 15px;
+  padding: 20px 50px 20px 50px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#footer{
-    width:80vw;
-    max-width: 1100px;
-    min-width: 500px;
-    /*font-size: clamp(30px, 2vw, 40px);*/
-    font-size:15px;
-    background-color: var(--backclr);
-
-    border-radius: 15px;
-    padding: 20px 50px 20px 50px;
-    
-    text-align: center;
-    position:absolute;
-    bottom:10px;
-
-
+td {
+  padding-bottom: 10px;
+  width: 100%;
 }
 
-#footer a{
-    
-    color:var(--clrtext);
-    margin-left: 20px;
-    margin-right: 20px
+.right {
+  text-align: right;
+  padding-left: 10px;
+}
+.left {
+  padding-right: 10px;
+  text-align: left;
 }
 
-
-@media (max-width: 767px){
-    
-    body{
-        background-image: url(/src/img/backgrnd_small.jpg);
-        position:relative;
-    }
-
-    li{
-        padding: 10px 1rem 10px 1rem;
-        margin:10px 0;
-    }
-    #content{
-        gap:10px;
-    }
+#map {
+  width: 80%;
+  margin-top: 20px;
 }
 
+#headerCont {
+  background-color: var(--backclr);
+  border-radius: 15px;
+  margin-top: 20px;
+  padding: 20px 50px 20px 50px;
+}
 
+#footer {
+  width: 80vw;
+  max-width: 1100px;
+  min-width: 500px;
+  /*font-size: clamp(30px, 2vw, 40px);*/
+  font-size: 15px;
+  background-color: var(--backclr);
+
+  border-radius: 15px;
+  padding: 20px 50px 20px 50px;
+
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+}
+
+#footer a {
+  color: var(--clrtext);
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+@media (max-width: 767px) {
+  body {
+    background-image: url(/src/img/backgrnd_small.jpg);
+    position: relative;
+  }
+
+  li {
+    padding: 10px 1rem 10px 1rem;
+    margin: 10px 0;
+  }
+  #content {
+    gap: 10px;
+  }
+}
