--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
-  min-width: 500px;
+  min-width: 300px;
   height: 100vh;
   min-height: 900px;
 
@@ -40,7 +40,7 @@ body {
   width: 80vw;
   justify-content: space-around;
   max-width: 1100px;
-  min-width: 500px;
+  min-width: 300px;
 }
 li {
   margin: 20px 0;
@@ -68,13 +68,13 @@ h1 {
 #container {
   width: 80vw;
   max-width: 1100px;
-  min-width: 500px;
+  min-width: 300px;
   /*font-size: clamp(30px, 2vw, 40px);*/
   font-size: 20px;
   background-color: var(--backclr);
 
   border-radius: 15px;
-  padding: 20px 50px 20px 50px;
+  padding: 20px 10px 20px 10px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -99,25 +99,26 @@ td {
 #map {
   width: 80%;
   margin-top: 20px;
+  height:300px;
 }
 
 #headerCont {
   background-color: var(--backclr);
   border-radius: 15px;
   margin-top: 20px;
-  padding: 20px 50px 20px 50px;
+  padding: 10px 20px 10px 20px;
 }
 
 #footer {
   width: 80vw;
   max-width: 1100px;
-  min-width: 500px;
+  min-width: 300px;
   /*font-size: clamp(30px, 2vw, 40px);*/
   font-size: 15px;
   background-color: var(--backclr);
 
   border-radius: 15px;
-  padding: 20px 50px 20px 50px;
+  padding: 20px 0px 20px 0px;
 
   text-align: center;
   position: absolute;
@@ -134,13 +135,43 @@ td {
   body {
     background-image: url(/src/img/backgrnd_small.jpg);
     position: relative;
+    min-height:100vh;
+    width: 100vw;
   }
 
   li {
-    padding: 10px 1rem 10px 1rem;
-    margin: 10px 0;
+    
+    margin: 10px ;
+    
+    
+    height: auto;
+    /*width: vw;*/
+    
+    gap:5px;
+    /*font-size: clamp(30px, 2vw, 40px);*/
+    font-size: 15px;
+    background-color: var(--backclr);
+    border-radius: 15px;
+    padding: 10px 20px 10px 20px;
+      
+  }
+  #container{
+    font-size:15px;
+    
   }
   #content {
     gap: 10px;
+  }
+  #footer{
+    font-size: 10px;
+    padding: 10px 0px 10px 0px;
+  }
+  #footer a {
+    
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  #map{
+    height: 200px;
   }
 }
